--- a/packages/oui-header-tabs/header-tabs.less
+++ b/packages/oui-header-tabs/header-tabs.less
@@ -65,6 +65,8 @@
         position: static;
         width: auto;
         vertical-align: baseline;
+        top: unset;
+        transform: none;
 
         &::before {
           margin-right: 0;
