--- a/packages/oui-icons/icons.less
+++ b/packages/oui-icons/icons.less
@@ -7,14 +7,6 @@
   #oui > .icon();
   #oui > .icon-type();
 
-  &_circle {
-    #oui > .icon-circle();
-  }
-
-  &_bicolor {
-    #oui > .icon-bicolor();
-  }
-
   &_shake {
     animation-name: oui-shake;
     animation-duration: 1.5s;
