--- a/packages/oui-message/_mixins.less
+++ b/packages/oui-message/_mixins.less
@@ -61,10 +61,6 @@
       line-height: 0;
       text-align: center;
 
-      &::before {
-        display: block;
-      }
-
       &:hover,
       &:focus,
       &:active {
