--- a/packages/oui-modal/_mixins.less
+++ b/packages/oui-modal/_mixins.less
@@ -48,10 +48,6 @@
       line-height: 1;
       text-align: center;
 
-      &::before {
-        display: block;
-      }
-
       &:hover,
       &:focus,
       &:active {
