--- a/packages/oui-tile/tile.less
+++ b/packages/oui-tile/tile.less
@@ -34,7 +34,7 @@
 
     &.oui-button_full-width.oui-button_icon-right {
       .oui-icon {
-        &:not(.oui-icon-external_link)::before {
+        &:not(.oui-icon-external_link) {
           right: @oui-tile-item-side-spacing;
         }
       }
